syntax = "proto3";

package main;

service starwars {
  rpc GetHero (GetHeroRequest) returns (Character) {}
	rpc SearchCharacter (SearchCharacterRequest) returns (SearchCharacterResponse) {}
  rpc AddReview(Review) returns (Review) {}
  rpc GetReviews(GetReviewsRequest) returns (GetReviewsResponse) {}
}

enum Episode {
	NEW_HOPE = 0;
	EMPIRE = 1;
	JEDI = 2;
}

message GetHeroRequest {
  Episode episode = 1;
}

message SearchCharacterRequest {
	int32 id = 1;
	string name = 2;
}

message SearchCharacterResponse {
	repeated Character characters = 1;
}

message Character {
  int32 id = 1;
  string name = 2;
  repeated string friends = 3;
  repeated Episode appears_in = 4;
  double height = 5;
  string primary_function = 6;
  string home_planet = 7;
}

message Review {
	Episode episode = 1;
  int32 stars = 2;
  string commentary = 3;
}

message GetReviewsRequest {
	Episode episode = 1;
}

message GetReviewsResponse {
  repeated Review reviews = 1;
}
